--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -24,154 +24,163 @@ translations:
   ###########################################################################
 
   # features
-  - key: options.never_heard
+  - key: options.features.never_heard
     t: 🤷 Never heard of it/Not sure what it is
-  - key: options.heard
+  - key: options.features.heard
     t: ✅ Know what it is, but haven't used it
-  - key: options.used
+  - key: options.features.used
     t: 👍 I've used it
 
   # patterns
-  - key: options.use_never
+  - key: options.patterns.use_never
     t: Almost always avoid
-  - key: options.use_sparingly
+  - key: options.patterns.use_sparingly
     t: Use sparingly
-  - key: options.use_neutral
+  - key: optionspatterns..use_neutral
     t: Neutral
-  - key: options.use_frequently
+  - key: options.patterns.use_frequently
     t: Use frequently
-  - key: options.use_always
+  - key: options.patterns.use_always
     t: Use as much as I can
 
   # tools
-  - key: options.interested
+  - key: options.tools.never_heard
+    t: 🤷 Never heard of it/Not sure what it is
+  - key: options.tools.never_heard
     t: ✅ Heard of it > Would like to learn
-  - key: options.not_interested
+  - key: options.tools.not_interested
     t: 🚫 Heard of it > Not interested
-  - key: options.would_use
+  - key: options.tools.would_use
     t: 👍 Used it > Would use again
-  - key: options.would_not_use
+  - key: options.tools.would_not_use
     t: 👎 Used it > Would avoid
   
   # happiness
-  - key: options.very_unhappy
+  - key: options.happiness.very_unhappy
     t: Very Unhappy
-  - key: options.unhappy
+  - key: options.happiness.unhappy
     t: Unhappy
-  - key: options.neutral
+  - key: options.happiness.neutral
     t: Neutral
-  - key: options.happy
+  - key: options.happiness.happy
     t: Happy
-  - key: options.very_happy
+  - key: options.happiness.very_happy
     t: Very Happy
 
   # opinions
-  - key: options.disagree_strongly
+  - key: options.opinions.disagree_strongly
     t: Disagree Strongly
-  - key: options.disagree
+  - key: options.opinions.disagree
     t: Disagree
-  # - key: options.neutral
-  #   key: Neutral
-  - key: options.agree
+  - key: options.opinions.neutral
+    t: Neutral
+  - key: options.opinions.agree
     t: Agree
-  - key: options.agree_strongly
+  - key: options.opinions.agree_strongly
     t: Agree Strongly
-      
+    
+  # years of experience
+  - key: options.years_of_experience.range_less_than_1
+    t: Less than one year
+  - key: options.years_of_experience.range_1_2
+    t: 1 to 2 years
+  - key: options.years_of_experience.range_2_5
+    t: 2 to 5 years
+  - key: options.years_of_experience.range_5_10
+    t: 5 to 10 years
+  - key: options.years_of_experience.range_10_20
+    t: 10 to 20 years
+  - key: options.years_of_experience.range_more_than_20
+    t: More than 20 years
+
+  # company size
+
+  - key: options.company_size.range_1
+    t: One employee
+  - key: options.company_size.range_1_5
+    t: 1 to 5 employees
+  - key: options.company_size.range_5_10
+    t: 5 to 10 employees
+  - key: options.company_size.range_10_20
+    t: 10 to 20 employees
+  - key: options.company_size.range_20_50
+    t: 20 to 50 employees
+  - key: options.company_size.range_50_100
+    t: 50 to 100 employees
+  - key: options.company_size.range_100_1000
+    t: 100 to 1000 employees
+  - key: options.company_size.range_more_than_1000
+    t: More than 1000 employees
+
+  # salary
+
+  - key: options.yearly_salary.range_work_for_free
+    t: I work for free
+  - key: options.yearly_salary.range_0_10
+    t: $0k-$10k
+  - key: options.yearly_salary.range_10_30
+    t: $10k-$30k
+  - key: options.yearly_salary.range_30_50
+    t: $30k-$50k
+  - key: options.yearly_salary.range_50_100
+    t: $50k-$100k
+  - key: options.yearly_salary.range_100_200
+    t: $100k-$200k
+  - key: options.yearly_salary.range_more_than_200
+    t: more than $200k
+
+  # job titles
+
+  - key: options.job_title.front_end_developer
+    t: Front End Developer/Engineer
+  - key: options.job_title.back_end_developer
+    t: Back End Developer/Engineer
+  - key: options.job_title.full_stack_developer
+    t: Full Stack Developer/Engineer
+  - key: options.job_title.web_developer
+    t: Web Developer
+  - key: options.job_title.web_designer
+    t: Web Designer
+  - key: options.job_title.ux_designer
+    t: UX Designer
+  - key: options.job_title.ui_designer
+    t: UI Designer
+  - key: options.job_title.back_end_dev
+    t: Back-end Developer/Engineer
+
   ###########################################################################
   # Demographics (About You/User Info)
   ###########################################################################
 
   # years of experience
-  - key: years_of_experience.title
+  - key: user_info.years_of_experience
     t: Years of Experience
-  - key: years_of_experience.description
+  - key: user_info.years_of_experience.description
     t: How long you've been writing {language}.
 
-  - key: years_of_experience.range_less_than_1
-    t: Less than one year
-  - key: years_of_experience.range_1_2
-    t: 1 to 2 years
-  - key: years_of_experience.range_2_5
-    t: 2 to 5 years
-  - key: years_of_experience.range_5_10
-    t: 5 to 10 years
-  - key: years_of_experience.range_10_20
-    t: 10 to 20 years
-  - key: years_of_experience.range_more_than_20
-    t: More than 20 years
-
   # company size
-  - key: company_size.title
+  - key: user_info.company_size
     t: Company Size
-  - key: company_size.description
+  - key: user_info.company_size.description
     t: How big your company is.
 
-  - key: company_size.range_1
-    t: One employee
-  - key: company_size.range_1_5
-    t: 1 to 5 employees
-  - key: company_size.range_5_10
-    t: 5 to 10 employees
-  - key: company_size.range_10_20
-    t: 10 to 20 employees
-  - key: company_size.range_20_50
-    t: 20 to 50 employees
-  - key: company_size.range_50_100
-    t: 50 to 100 employees
-  - key: company_size.range_100_1000
-    t: 100 to 1000 employees
-  - key: company_size.range_more_than_1000
-    t: More than 1000 employees
-
   # salary ranges
-  - key: yearly_salary.title
+  - key: user_info.yearly_salary
     t: Yearly Salary
-  - key: yearly_salary.description
+  - key: user_info.yearly_salary.description
     t: In USD.
 
-  - key: yearly_salary.range_work_for_free
-    t: I work for free
-  - key: yearly_salary.range_0_10
-    t: $0k-$10k
-  - key: yearly_salary.range_10_30
-    t: $10k-$30k
-  - key: yearly_salary.range_30_50
-    t: $30k-$50k
-  - key: yearly_salary.range_50_100
-    t: $50k-$100k
-  - key: yearly_salary.range_100_200
-    t: $100k-$200k
-  - key: yearly_salary.range_more_than_200
-    t: more than $200k
-
   # job title
-  - key: job_title.title
+  - key: user_info.job_title
     t: Job Title
-  - key: job_title.description
+  - key: user_info.job_title.description
     t: How do you introduce yourself at parties?
-
-  - key: job_title.front_end_developer
-    t: Front End Developer/Engineer
-  - key: job_title.back_end_developer
-    t: Back End Developer/Engineer
-  - key: job_title.full_stack_developer
-    t: Full Stack Developer/Engineer
-  - key: job_title.web_developer
-    t: Web Developer
-  - key: job_title.web_designer
-    t: Web Designer
-  - key: job_title.ux_designer
-    t: UX Designer
-  - key: job_title.ui_designer
-    t: UI Designer
-  - key: job_title.back_end_dev
-    t: Back-end Developer/Engineer
 
   # javascript proficiency
 
-  - key: javascript_proficiency.title
+  - key: user_info.javascript_proficiency
     t: CSS Proficiency
-  - key: javascript_proficiency.description
+  - key: user_info.javascript_proficiency.description
     t: How proficient are you at JavaScript?
 
   - key: javascript_proficiency.0
@@ -187,9 +196,9 @@ translations:
 
   # css proficiency
 
-  - key: css_proficiency.title
+  - key: user_info.css_proficiency
     t: CSS Proficiency
-  - key: css_proficiency.description
+  - key: user_info.css_proficiency.description
     t: How proficient are you at CSS?
 
   - key: css_proficiency.0
@@ -204,9 +213,9 @@ translations:
     t: 'Able to style an entire front-end from scratch following a consistent methodology'
 
   # backend proficiency
-  - key: backend_proficiency.title
+  - key: user_info.backend_proficiency
     t: Back-end Proficiency
-  - key: backend_proficiency.description
+  - key: user_info.backend_proficiency.description
     t: How proficient are you at back-end development?
 
   - key: backend_proficiency.0
@@ -221,7 +230,7 @@ translations:
     t: 'Able to handle complex multi-server or microservices architectures'
 
   # gender
-  - key: gender.title
+  - key: user_info.gender
     t: Gender
   - key: gender.female
     t: Female
