--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -148,6 +148,45 @@ translations:
   - key: options.job_title.back_end_dev
     t: Back-end Developer/Engineer
 
+  # JavaScript proficiency
+
+  - key: options.javascript_proficiency.0
+    t: Not able to write any JavaScript
+  - key: options.javascript_proficiency.1
+    t: Writing short, simple JavaScript or jQuery statements
+  - key: options.javascript_proficiency.2
+    t: Working on existing front-end codebases using modern frameworks (React, Vue, etc.)
+  - key: options.javascript_proficiency.3
+    t: Architecturing entire front-end codebases from scratch
+  - key: options.javascript_proficiency.4
+    t: Handling advanced front-end patterns (state management, data loading, etc.)
+
+  # CSS proficiency
+
+  - key: options.css_proficiency.0
+    t: Virtually no knowledge of CSS
+  - key: options.css_proficiency.1
+    t: Using CSS frameworks and tweaking existing styles
+  - key: options.css_proficiency.2
+    t: Knowing specificity rules, being able to create layouts
+  - key: options.css_proficiency.3
+    t: Mastering animations, interactions, transitions, etc.
+  - key: options.css_proficiency.4
+    t: Able to style an entire front-end from scratch following a consistent methodology
+
+  # Back-end proficiency
+
+  - key: options.backend_proficiency.0
+    t: Not able to handle any back-end work
+  - key: options.backend_proficiency.1
+    t: Able to set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
+  - key: options.backend_proficiency.2
+    t: Able to develop apps using pre-existing frameworks (Rails, Laravel, etc.)
+  - key: options.backend_proficiency.3
+    t: Setting up an entire back-end from scratch (Go, Node, etc.)
+  - key: options.backend_proficiency.4
+    t: Able to handle complex multi-server or microservices architectures
+
   ###########################################################################
   # Demographics (About You/User Info)
   ###########################################################################
@@ -183,17 +222,6 @@ translations:
   - key: user_info.javascript_proficiency.description
     t: How proficient are you at JavaScript?
 
-  - key: javascript_proficiency.0
-    t: 'Not able to write any JavaScript'
-  - key: javascript_proficiency.1
-    t: 'Writing short, simple JavaScript or jQuery statements'
-  - key: javascript_proficiency.2
-    t: 'Working on existing front-end codebases using modern frameworks (React, Vue, etc.)'
-  - key: javascript_proficiency.3
-    t: 'Architecturing entire front-end codebases from scratch'
-  - key: javascript_proficiency.4
-    t: 'Handling advanced front-end patterns (state management, data loading, etc.)'
-
   # css proficiency
 
   - key: user_info.css_proficiency
@@ -201,33 +229,11 @@ translations:
   - key: user_info.css_proficiency.description
     t: How proficient are you at CSS?
 
-  - key: css_proficiency.0
-    t: 'Virtually no knowledge of CSS'
-  - key: css_proficiency.1
-    t: 'Using CSS frameworks and tweaking existing styles'
-  - key: css_proficiency.2
-    t: 'Knowing specificity rules, being able to create layouts'
-  - key: css_proficiency.3
-    t: 'Mastering animations, interactions, transitions, etc.'
-  - key: css_proficiency.4
-    t: 'Able to style an entire front-end from scratch following a consistent methodology'
-
   # backend proficiency
   - key: user_info.backend_proficiency
     t: Back-end Proficiency
   - key: user_info.backend_proficiency.description
     t: How proficient are you at back-end development?
-
-  - key: backend_proficiency.0
-    t: 'Not able to handle any back-end work'
-  - key: backend_proficiency.1
-    t: 'Able to set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)'
-  - key: backend_proficiency.2
-    t: 'Able to develop apps using pre-existing frameworks (Rails, Laravel, etc.)'
-  - key: backend_proficiency.3
-    t: 'Setting up an entire back-end from scratch (Go, Node, etc.)'
-  - key: backend_proficiency.4
-    t: 'Able to handle complex multi-server or microservices architectures'
 
   # gender
   - key: user_info.gender
@@ -289,7 +295,6 @@ translations:
     t: Other Languages
   - key: other_tools.non_js_languages.others.description
     t: Other answers (freeform field).
-
 
 ###########################################################################
 # Resources
