--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -46,7 +46,7 @@ translations:
   # tools
   - key: options.tools.never_heard
     t: 🤷 Never heard of it/Not sure what it is
-  - key: options.tools.never_heard
+  - key: options.tools.interested
     t: ✅ Heard of it > Would like to learn
   - key: options.tools.not_interested
     t: 🚫 Heard of it > Not interested
@@ -246,6 +246,14 @@ translations:
     t: Non-Binary/Third Gender
   - key: gender.prefer_not_to_say
     t: Prefer not to say
+
+  # other info
+  - key: user_info.how_did_you_find_out
+    t: How did you find out about this survey?
+  - key: user_info.email
+    t: Your Email
+  - key: user_info.country
+    t: Your Country
 
   ###########################################################################
   # Other Tools
