--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -1,5 +1,22 @@
 locale: en-US
 translations:
+
+  ###########################################################################
+  # General
+  ###########################################################################
+
+  - key: general.survey_intro_css2020
+    t: >
+      CSS is evolving faster than ever.
+
+      
+      Flexbox, Grid, Multi-Column… To say nothing of whole new paradigms like CSS-in-JS.
+
+      
+      So after the success of our annual State Of JavaScript survey, 
+      we’ve decided to take on the world of styles and selectors to help 
+      identify the latests trends… and try to bridge the ever-growing “great front-end divide”!
+
   ###########################################################################
   # Sections
   ###########################################################################
