--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -31,7 +31,7 @@ translations:
     t: Closed Surveys
   - key: general.start_survey
     t: Start Survey »
-  - key: general.start_survey
+  - key: general.continue_survey
     t: Continue Survey »
   - key: general.review_survey
     t: Review Survey »
