--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -61,11 +61,11 @@ translations:
   - key: general.back
     t: Back
   - key: general.thanks
-    t: Thanks for filling out the survey!
-  - key: general.review_data
-    t: Your data is saved. You can review or modify it until the survey closes.
-  - key: general.help_share
     t: >
+      Thanks for filling out the survey!
+      
+      Your data is saved. You can review or modify it until the survey closes.
+
       Also, you can help us get the word out by sharing this survey. Every bit counts, and it'll help make our data even
       more representative:
 
