--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -32,6 +32,8 @@ translations:
   # surveys
   - key: general.open_surveys
     t: Open Surveys
+  - key: general.no_open_surveys
+    t: No surveys are currently open.
   - key: general.closed_surveys
     t: Closed Surveys
   - key: general.start_survey
@@ -45,7 +47,7 @@ translations:
   - key: general.finish_survey
     t: Finish Survey »
   - key: general.survey_closed
-    t: Survey closed.
+    t: This survey is now closed.
 
   # footer
   - key: general.privacy_policy
@@ -119,6 +121,7 @@ translations:
       If you have any questions about how we use your data, or would like
       us to remove your data from our records,
       please <a href="mailto:hello@stateofjs.com">get in touch</a>.
+      
   ###########################################################################
   # Sections
   ###########################################################################
@@ -131,12 +134,17 @@ translations:
   - key: sections.resources.title
     t: Resources
   - key: sections.resources.description
-    t: What {language} resources do you consult?
+    t: What {topic} resources do you consult?
 
   - key: sections.opinions.title
     t: Opinions
   - key: sections.opinions.description
-    t: How do you feel about the state of {language}?
+    t: How do you feel about the state of {topic}?
+
+  - key: sections.other_tools.title
+    t: Other Tools
+  - key: sections.other_tools.description
+    t: For these tools & technologies, just check the ones that you use regularly.
 
   ###########################################################################
   # Options
@@ -306,6 +314,32 @@ translations:
   - key: options.backend_proficiency.4
     t: Able to handle complex multi-server or microservices architectures
 
+  # Gender
+
+  - key: options.gender.female
+    t: Female
+  - key: options.gender.male
+    t: Male
+  - key: options.gender.non_binary
+    t: Non-Binary/Third Gender
+  - key: options.gender.prefer_not_to_say
+    t: Prefer not to say
+
+  ###########################################################################
+  # Tools
+  ###########################################################################
+
+  - key: tools.other_tools
+    t: Other Options
+  - key: tools.other_tools.description
+    t: Other options you use for the current section not mentioned in the list above
+  - key: tools.happiness
+    t: Overall Happiness
+  - key: tools.happiness.description
+    t: >
+      On a scale of one (very unhappy) to five (very happy), how happy are
+      you with the current overall state of things as it relates to the options listed above?
+
   ###########################################################################
   # Demographics (About You/User Info)
   ###########################################################################
@@ -314,7 +348,7 @@ translations:
   - key: user_info.years_of_experience
     t: Years of Experience
   - key: user_info.years_of_experience.description
-    t: How long you've been writing {language}.
+    t: How long you've been working or studying in this field.
 
   # company size
   - key: user_info.company_size
@@ -357,14 +391,6 @@ translations:
   # gender
   - key: user_info.gender
     t: Gender
-  - key: gender.female
-    t: Female
-  - key: gender.male
-    t: Male
-  - key: gender.non_binary
-    t: Non-Binary/Third Gender
-  - key: gender.prefer_not_to_say
-    t: Prefer not to say
 
   # other info
   - key: user_info.how_did_you_find_out
@@ -431,7 +457,7 @@ translations:
   - key: resources.blogs_news_magazines
     t: Blogs & Magazines
   - key: resources.blogs_news_magazines.description
-    t: Which JS-related blogs/magazines/etc. do you read?
+    t: Which blogs/magazines/etc. do you read?
   - key: resources.blogs_news_magazines.others
     t: Other Blogs & Magazines
   - key: resources.blogs_news_magazines.others.description
@@ -441,7 +467,7 @@ translations:
   - key: resources.sites_courses
     t: Sites & Courses
   - key: resources.sites_courses.description
-    t: Which JS-related sites/courses/etc. do you consult?
+    t: Which sites/courses/etc. do you consult?
   - key: resources.sites_courses.others
     t: Other Sites & Courses
   - key: resources.sites_courses.others.description
@@ -451,7 +477,7 @@ translations:
   - key: resources.podcasts
     t: Podcasts
   - key: resources.podcasts.description
-    t: Which JavaScript or programming-related podcasts do you listen to?
+    t: Which programming-related podcasts do you listen to?
   - key: resources.podcasts.others
     t: Other Podcasts
   - key: resources.podcasts.others.description
