--- a/packages/stateofjs/lib/i18n/state-of-js/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-js/yml/en-US.yml
@@ -133,6 +133,10 @@ translations:
     t: Promises
   - key: features.decorators
     t: Decorators
+  - key: features.decorators.description
+    t:  >
+      In its simplest form, a decorator is simply a way of 
+      wrapping one piece of code with another — literally “decorating” it. 
 
   # data structures
   - key: features.maps
