--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -158,6 +158,14 @@ translations:
   - key: options.features.used
     t: 👍 I've used it
 
+  # features (short versions)
+  - key: options.features.never_heard.short
+    t: Never heard of it
+  - key: options.features.heard.short
+    t: Know about it
+  - key: options.features.used.short
+    t: Have used it
+
   # patterns
   - key: options.patterns.use_never
     t: Almost always avoid
@@ -170,7 +178,7 @@ translations:
   - key: options.patterns.use_always
     t: Use as much as I can
 
-  # tools
+  # tools experience
   - key: options.tools.never_heard
     t: 🤷 Never heard of it/Not sure what it is
   - key: options.tools.interested
@@ -180,7 +188,19 @@ translations:
   - key: options.tools.would_use
     t: 👍 Used it > Would use again
   - key: options.tools.would_not_use
-    t: 👎 Used it > Would avoid
+    t: 👎 Used it > Would not use again
+
+  # tools experience (short versions)
+  - key: options.tools.never_heard
+    t: Never heard
+  - key: options.tools.interested
+    t: Interested
+  - key: options.tools.not_interested
+    t: Not interested
+  - key: options.tools.would_use
+    t: Would use again
+  - key: options.tools.would_not_use
+    t: Would not use
   
   # happiness
   - key: options.happiness.very_unhappy
@@ -220,8 +240,21 @@ translations:
   - key: options.years_of_experience.range_more_than_20
     t: More than 20 years
 
-  # company size
+  # years of experience (short versions)
+  - key: options.years_of_experience.range_less_than_1.short
+    t: '<1'
+  - key: options.years_of_experience.range_1_2.short
+    t: 1-2
+  - key: options.years_of_experience.range_2_5.short
+    t: 2-5
+  - key: options.years_of_experience.range_5_10
+    t: 5-10
+  - key: options.years_of_experience.range_10_20.short
+    t: 10-20
+  - key: options.years_of_experience.range_more_than_20.short
+    t: '>20'
 
+  # company size
   - key: options.company_size.range_1
     t: One employee
   - key: options.company_size.range_1_5
@@ -239,8 +272,25 @@ translations:
   - key: options.company_size.range_more_than_1000
     t: More than 1000 employees
 
-  # salary
+  # company dize (short versions)
+  - key: options.company_size.range_1.short
+    t: 1
+  - key: options.company_size.range_1_5.short
+    t: 1-5
+  - key: options.company_size.range_5_10.short
+    t: 5-10
+  - key: options.company_size.range_10_20.short
+    t: 10-20
+  - key: options.company_size.range_20_50.short
+    t: 20-50
+  - key: options.company_size.range_50_100.short
+    t: 50-100
+  - key: options.company_size.range_100_1000.short
+    t: 100-1000
+  - key: options.company_size.range_more_than_1000.short
+    t: '>1000'
 
+  # salary
   - key: options.yearly_salary.range_work_for_free
     t: I work for free
   - key: options.yearly_salary.range_0_10
@@ -256,8 +306,23 @@ translations:
   - key: options.yearly_salary.range_more_than_200
     t: more than $200k
 
-  # job titles
+  # salary (short versions)
+  - key: options.yearly_salary.range_work_for_free.short
+    t: '$0'
+  - key: options.yearly_salary.range_0_10.short
+    t: $0k-$10k
+  - key: options.yearly_salary.range_10_30.short
+    t: $10k-$30k
+  - key: options.yearly_salary.range_30_50.short
+    t: $30k-$50k
+  - key: options.yearly_salary.range_50_100.short
+    t: $50k-$100k
+  - key: options.yearly_salary.range_100_200.short
+    t: $100k-$200k
+  - key: options.yearly_salary.range_more_than_200.short
+    t: '>$200k'
 
+  # job titles
   - key: options.job_title.front_end_developer
     t: Front End Developer/Engineer
   - key: options.job_title.back_end_developer
@@ -313,6 +378,18 @@ translations:
     t: Setting up an entire back-end from scratch (Go, Node, etc.)
   - key: options.backend_proficiency.4
     t: Able to handle complex multi-server or microservices architectures
+
+  # Proficiency (generic versions)
+  - key: options.proficiency.0
+    t: None
+  - key: options.proficiency.1
+    t: Beginner
+  - key: options.proficiency.2
+    t: Intermediate
+  - key: options.proficiency.3
+    t: Advanced
+  - key: options.proficiency.4
+    t: Expert
 
   # Gender
 
