--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -282,8 +282,8 @@ translations:
   - key: opinions.enjoy_writing_css
     t: I enjoy writing CSS
     
-  - key: opinions.currently_missing_from_css
+  - key: opinions.currently_missing_from_css.others
     t: What do you feel is currently missing from CSS?
-  - key: opinions.currently_missing_from_css.description
+  - key: opinions.currently_missing_from_css.others.description
     t: Features you'd like to see in CSS one day.
     
