--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -483,11 +483,9 @@ translations:
     t: Gender
 
 
-  # skin tone
+  # skin tone/appearance
   - key: user_info.skin_tone
-    t: Skin Tone
-  - key: user_info.skin_tone
-    t: Skin Tone
+    t: Appearance
   - key: user_info.skin_tone.description
     t: >
         Which emoji do you feel represents you best? <br/><br/>
