A few more tweaks

--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -48,6 +48,8 @@ translations:
     t: Finish Survey »
   - key: general.survey_closed
     t: This survey is now closed.
+  - key: general.survey_results
+    t: View Survey Results »
 
   # footer
   - key: general.privacy_policy
