Add tailwind alias

--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -237,6 +237,13 @@ translations:
     t: Form Controls
 
   ###########################################################################
+  # Tools
+  ###########################################################################
+
+  - key: tools.atomiccss
+    t: Utility-First/Atomic CSS
+
+  ###########################################################################
   # Environments
   ###########################################################################
 
