--- a/packages/stateofjs/lib/i18n/results/yml/it-IT.yml
+++ b/packages/stateofjs/lib/i18n/results/yml/it-IT.yml
@@ -1,4 +1,4 @@
-locale: en-US
+locale: it-IT
 translations:
   ###########################################################################
   # General
