--- a/packages/stateofjs/lib/i18n/results/yml/hi-IN.yml
+++ b/packages/stateofjs/lib/i18n/results/yml/hi-IN.yml
@@ -1,34 +1,34 @@
-locale: en-US
+locale: hi-IN
 translations:
   ###########################################################################
-  # General
+  # सामान्य
   ###########################################################################
 
   ###########################################################################
-  # Features
+  # विशेषताएं
   ###########################################################################
 
   - key: features.learn_more
-    t: Learn More (MDN)
+    t: और अधिक जानें (MDN)
   - key: features.mdn_link
     t: MDN
   - key: features.caniuse_link
-    t: CanIUse
+    t: क्या में उपयोग कर सकता हूँ
   - key: features.specification_link
-    t: W3C Specification
+    t: W3C विशिष्टता
 
   ###########################################################################
-  # Tools & Methodologies
+  # उपकरण और तरीके
   ###########################################################################
 
-  # general
+  # सामान्य
   - key: tools.links
-    t: Links
+    t: लिंक
   - key: tools.github_link
     t: GitHub
   - key: tools.github_stars
-    t: stars
+    t: सितारे
   - key: tools.homepage_link
-    t: Homepage
+    t: मुखपृष्ठ
   - key: tools.npm_link
     t: NPM
