--- a/packages/stateofjs/lib/i18n/state-of-css/yml/hi-IN.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/hi-IN.yml
@@ -1,4 +1,4 @@
-locale: en-US
+locale: hi-IN
 namespace: css
 translations:
   ###########################################################################
@@ -7,79 +7,79 @@ translations:
 
   - key: general.survey_intro_css2020
     t: >
-      CSS is evolving faster than ever.
+      CSS पहले से कहीं ज्यादा तेजी से विकसित हो रहा है।
 
 
-      Flexbox, Grid, Multi-Column… To say nothing of whole new paradigms like CSS-in-JS.
+      Flexbox, Grid, Multi-Column… CSS-in-JS जैसे पूरे नए प्रतिमानों के बारे में कुछ नहीं कहना।
 
 
-      So after the success of our annual State Of JavaScript survey, 
-      we’ve decided to take on the world of styles and selectors to help 
-      identify the latests trends… and try to bridge the ever-growing “great front-end divide”!
+      इसलिए हमारे वार्षिक स्टेट ऑफ जावास्क्रिप्ट सर्वे की सफलता के बाद, 
+      हमने अक्षांशों के रुझानों की पहचान करने में मदद करने के लिए शैलियों और चयनकर्ताओं 
+      की दुनिया पर फैसला किया है… और बढ़ती "महान फ्रंट-एंड डिवाइड" को जोड़ने की कोशिश करें!
 
   ###########################################################################
   # Sections
   ###########################################################################
 
   - key: sections.layout.title
-    t: Layout
+    t: ख़ाका
   - key: sections.layout.description
-    t: How do you position elements on the screen?
+    t: आप स्क्रीन पर चीजों की स्थिति कैसे बनाते हैं?
 
   - key: sections.shapes_graphics.title
-    t: Shapes & Graphics
+    t: आकृतियाँ और ग्राफिक्स
   - key: sections.shapes_graphics.description
-    t: Controlling the shape and display of elements.
+    t: तत्वों के आकार और प्रदर्शन को नियंत्रित करना।
 
   - key: sections.interactions.title
-    t: Interactions
+    t: सहभागिता
   - key: sections.interactions.description
-    t: Controlling how the user interacts with the page.
+    t: नियंत्रित करता है कि उपयोगकर्ता पृष्ठ के साथ कैसे इंटरैक्ट करता है।
 
   - key: sections.typography.title
-    t: Typography
+    t: टाइपोग्राफी
   - key: sections.typography.description
-    t: Setting and laying out text.
+    t: पाठ सेट करना और रखना।
 
   - key: sections.animations_transforms.title
-    t: Animations & Transforms
+    t: एनिमेशन और रूपांतरण
   - key: sections.animations_transforms.description
-    t: Animating and transforming elements.
+    t: ऐनमेशन और परिवर्तनकारी तत्व।
 
   - key: sections.other_features.title
-    t: Other Features
+    t: अन्य सुविधाएं
   - key: sections.other_features.description
-    t: Other CSS features.
+    t: अन्य CSS सुविधाएँ।
 
   - key: sections.units_selectors.title
-    t: Units & Selectors
+    t: इकाइयां और चयनकर्ता
   - key: sections.units_selectors.description
-    t: Test your knowledge of CSS units and selectors.
+    t: CSS इकाइयों और चयनकर्ताओं के अपने ज्ञान का परीक्षण करें।
 
   - key: sections.pre_post_processors.title
-    t: Pre-/Post-processors
+    t: पूर्व/पोस्ट-प्रोसेसर
   - key: sections.pre_post_processors.description
-    t: Utilities that augment CSS.
+    t: उपयोगिताएँ जो सीएसएस को बढ़ाती हैं।
 
   - key: sections.css_frameworks.title
-    t: CSS Frameworks
+    t: CSS फ़्रेमवर्क
   - key: sections.css_frameworks.description
-    t: Libraries that give you pre-made components and styles.
+    t: लाइब्रेरी जो आपको पूर्व-निर्मित घटकों और शैलियाँ देते हैं।
 
   - key: sections.css_methodologies.title
-    t: CSS Methodologies
+    t: CSS के तरीके
   - key: sections.css_methodologies.description
-    t: Codified ways to write cleaner CSS.
+    t: क्लीनर CSS लिखने के लिए संहिताबद्ध तरीके।
 
   - key: sections.css_in_js.title
-    t: CSS-in-JS
+    t: CSS-में-JS
   - key: sections.css_in_js.description
-    t: Libraries that help integrate CSS into JavaScript code.
+    t: लाइब्रेरी जो सीएसएस को जावास्क्रिप्ट कोड में एकीकृत करने में मदद करते हैं।
 
   - key: sections.environments.title
-    t: Environments
+    t: वातावरण
   - key: sections.environments.description
-    t: Which environments do you write CSS for?
+    t: आप किस वातावरण के लिए CSS लिखते हैं?
 
   ###########################################################################
   # Options
@@ -87,23 +87,23 @@ translations:
 
   # CSS for print
   - key: options.css_for_print.0
-    t: I (almost) never write print styles
+    t: मैं (लगभग) प्रिंट शैली कभी नहीं लिखता
   - key: options.css_for_print.1
-    t: I occasionally write print styles
+    t: मैं कभी-कभी प्रिंट शैलियों को लिखता हूं
   - key: options.css_for_print.2
-    t: I write print styles as part of most projects
+    t: मैं ज्यादातर प्रोजेक्ट्स के हिस्से के रूप में प्रिंट स्टाइल लिखता हूं
   - key: options.css_for_print.3
-    t: I focus mainly on CSS for print
+    t: मैं मुख्य रूप से प्रिंट के लिए CSS पर ध्यान केंद्रित करता हूं
 
   # CSS for email
   - key: options.css_for_email.0
-    t: I (almost) never write CSS for email clients
+    t: मैं (लगभग) ईमेल क्लाइंट के लिए कभी भी CSS नहीं लिखता
   - key: options.css_for_email.1
-    t: I occasionally write CSS for email clients
+    t: मैं कभी-कभी ईमेल क्लाइंट के लिए CSS लिखता हूं
   - key: options.css_for_email.2
-    t: I write CSS for email clients as part of most projects
+    t: मैं अधिकांश परियोजनाओं के हिस्से के रूप में ईमेल क्लाइंट के लिए CSS लिखता हूं
   - key: options.css_for_email.3
-    t: I focus mainly on CSS for email clients
+    t: मैं मुख्य रूप से ईमेल क्लाइंट के लिए CSS पर ध्यान केंद्रित करता हूं
 
   ###########################################################################
   # Features
@@ -112,23 +112,23 @@ translations:
   # layout
 
   - key: features.grid
-    t: CSS Grid
+    t: CSS ग्रिड
   - key: features.subgrid
-    t: Subgrid
+    t: सबग्रिड
   - key: features.regions
-    t: CSS Regions
+    t: CSS क्षेत्र
   - key: features.flexbox
-    t: Flexbox
+    t: फ्लेक्सबोक्स
   - key: features.multi_column
-    t: CSS Multi-Column
+    t: CSS मल्टी कॉलम
   - key: features.writing_modes
-    t: CSS Writing Modes
+    t: CSS लेखन मोड
   - key: features.exclusions
-    t: CSS Exclusions
+    t: CSS बहिष्करण
   - key: features.position_sticky
     t: "Position: sticky"
   - key: features.logical_properties
-    t: Logical Properties
+    t: तार्किक गुण
   - key: features.logical_properties.description
     t: margin-block-start, padding-inline-end, etc.
   - key: features.aspect_ratio
@@ -136,7 +136,7 @@ translations:
 
   # shapes & graphics
   - key: features.shapes
-    t: CSS Shapes
+    t: CSS आकृतियाँ
   - key: features.object_fit
     t: Object-fit
   - key: features.clip_path
@@ -146,13 +146,13 @@ translations:
   - key: features.blend_modes
     t: Blend Modes
   - key: features.blend_modes.description
-    t: The mix-blend-mode property
+    t: मिक्स-ब्लेंड-मोड संपत्ति
   - key: features.filter_effects
-    t: CSS Filter Effects
+    t: CSS फ़िल्टर प्रभाव
 
   # interactions
   - key: features.scroll_snap
-    t: CSS Scroll Snap
+    t: CSS स्क्रॉल करें
   - key: features.overscroll_behavior
     t: Overscroll-behavior
   - key: features.overflow_anchor
@@ -160,11 +160,11 @@ translations:
 
   # typography
   - key: features.web_fonts
-    t: Web fonts (@font-face)
+    t: वेब फोंट (@font-face)
   - key: features.variables_fonts
-    t: Variable fonts
+    t: चर फोंट
   - key: features.line_breaking
-    t: Line breaking properties (overflow-wrap, word-break, line-break, hyphens)
+    t: लाइन ब्रेकिंग गुण (overflow-wrap, word-break, line-break, hyphens)
   - key: features.font_variant
     t: Font-variant-*
   - key: features.initial_letter
@@ -178,27 +178,27 @@ translations:
 
   # animations & transforms
   - key: features.transitions
-    t: CSS Transitions
+    t: CSS संक्रमण
   - key: features.transforms
-    t: CSS Transforms
+    t: CSS ट्रांसफॉर्म
   - key: features.animations
-    t: CSS Animations
+    t: CSS एनिमेशन्स
 
   # other features
   - key: features.variables
-    t: CSS Variables
+    t: CSS चर
   - key: features.feature_support_queries
-    t: Feature Support Queries (@supports)
+    t: फ़ीचर सपोर्ट क्वेरी (@supports)
   - key: features.containment
-    t: CSS Containment
+    t: CSS रोकथाम
   - key: features.will_change
-    t: Will-change
+    t: बदल-जाएगा
   - key: features.calc
     t: calc()
   - key: features.houdini
-    t: Houdini
+    t: हूडिनी
   - key: features.comparison_functions
-    t: CSS Comparison Functions
+    t: CSS तुलना कार्य
   - key: features.comparison_functions.description
     t: min(), max(), and clamp()
 
@@ -208,92 +208,92 @@ translations:
 
   # units & selectors
   - key: features.units
-    t: Units
+    t: इकाइयां
   - key: features.units.description
-    t: Which of these CSS units have you used?
+    t: आपने इनमें से किस CSS इकाइयों का उपयोग किया है?
 
   - key: features.pseudo_elements
-    t: Pseudo Elements
+    t: छद्म तत्व
   - key: features.pseudo_elements.description
-    t: Which of these CSS selectors have you used?
+    t: आपने इनमें से कौन सी CSS चयनकर्ताओं का उपयोग किया है?
 
   - key: features.combinators
-    t: Combinators
+    t: कॉम्बिनेटर्स
 
   - key: features.tree_document_structure
-    t: Tree / Document Structure
+    t: वृक्ष / दस्तावेज संरचना
 
   - key: features.attributes
-    t: Attributes
+    t: गुण
 
   - key: features.links_urls
-    t: Links/URLs
+    t: लिंक/यूआरएल
 
   - key: features.interaction
-    t: Interaction
+    t: इंटरेक्शन
 
   - key: features.form_controls
-    t: Form Controls
+    t: प्रपत्र नियंत्रण
 
   ###########################################################################
   # Tools
   ###########################################################################
 
   - key: tools.atomiccss
-    t: Utility-First/Atomic CSS
+    t: उपयोगिता-प्रथम / परमाणु CSS
 
   ###########################################################################
   # Environments
   ###########################################################################
 
   - key: environments.browsers
-    t: Browsers
+    t: ब्राउज़र्स
   - key: environments.browsers.description
-    t: Which browsers do you test in?
+    t: आप किन ब्राउज़रों पर परीक्षण करते हैं?
 
   - key: environments.form_factors
-    t: Form Factors
+    t: फ़ार्म के कारक
   - key: environments.form_factors.description
-    t: Which form factors do you test on?
+    t: आप किन फॉर्म कारकों पर परीक्षण करते हैं?
 
   - key: environments.css_for_print
-    t: CSS for Print
+    t: प्रिंट के लिए CSS
   - key: environments.css_for_print.description
-    t: Do you write print styles?
+    t: क्या आप प्रिंट शैली लिखते हैं?
 
   - key: environments.css_for_email
-    t: CSS for Email Clients
+    t: ईमेल ग्राहकों के लिए CSS
   - key: environments.css_for_email.description
-    t: Do you write CSS for email clients?
+    t: क्या आप ईमेल क्लाइंट के लिए CSS लिखते हैं?
 
   ###########################################################################
   # Opinions
   ###########################################################################
 
   - key: opinions.css_easy_to_learn
-    t: CSS is easy to learn
+    t: CSS सीखना आसान है
 
   - key: opinions.css_evolving_slowly
-    t: CSS is evolving too slowly
+    t: CSS बहुत धीरे-धीरे विकसित हो रहा है
 
   - key: opinions.utility_classes_to_be_avoided
-    t: Utility (non-semantic) classes (.center, .large-text, etc.) should be avoided
+    t: उपयोगिता (गैर-शब्दार्थ) classes (.center, .large-text, etc.) से बचा जाना चाहिए
 
   - key: opinions.selector_nesting_to_be_avoided
-    t: Selector nesting (.foo .bar ul li {...}) should be avoided
+    t: सेलेक्टर नेस्टिंग (.foo .bar ul li {...}) से बचा जाना चाहिए
 
   - key: opinions.css_is_programming_language
-    t: CSS is a programming language
+    t: CSS एक प्रोग्रामिंग लैंग्वेज है
 
   - key: opinions.enjoy_writing_css
-    t: I enjoy writing CSS
+    t: मुझे CSS लिखने में मज़ा आता है
 
   - key: opinions.currently_missing_from_css.others
-    t: What do you feel is currently missing from CSS?
+    t: आपको क्या लगता है वर्तमान में CSS से गायब है?
   - key: opinions.currently_missing_from_css.others.description
-    t: Features you'd like to see in CSS one day.
+    t: वे विशेषताएँ जिन्हें आप एक दिन CSS में देखना चाहते हैं।
 
   - key: opinions.sum_up_one_word_css
-    t: CSS in one word
+    t: एक शब्द में CSS
   - key: opinions.sum_up_one_word_css.description
-    t: How would you sum up your opinion of CSS in one word?
+    t: आप एक शब्द में CSS की अपनी राय कैसे देंगे?
