--- a/packages/stateofjs/lib/i18n/common/yml/hi-IN.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/hi-IN.yml
@@ -1,4 +1,4 @@
-locale: en-US
+locale: hi-IN
 translations:
   ###########################################################################
   # General
