--- a/packages/stateofjs/lib/i18n/state-of-js/yml/hi-IN.yml
+++ b/packages/stateofjs/lib/i18n/state-of-js/yml/hi-IN.yml
@@ -1,4 +1,4 @@
-locale: en-US
+locale: hi-IN
 namespace: js
 translations:
   ###########################################################################
