Add locale selector on main surveys page

--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -50,6 +50,10 @@ translations:
     t: This survey is now closed.
   - key: general.survey_results
     t: View Survey Results »
+  - key: general.surveys_available_languages
+    t: "Surveys available in:"
+  - key: general.help_us_translate
+    t: Help us translate the surveys »
 
   # footer
   - key: general.privacy_policy
