--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -132,45 +132,45 @@ translations:
   - key: features.exclusions
     t: CSS Exclusions
   - key: features.position_sticky
-    t: 'Position: sticky'
+    t: '<code>position: sticky</code>'
   - key: features.logical_properties
     t: Logical Properties
   - key: features.logical_properties.description
-    t: margin-block-start, padding-inline-end, etc.
+    t: <code>margin-block-start</code>, <code>padding-inline-end</code>, etc.
   - key: features.aspect_ratio
-    t: aspect-ratio
+    t: <code>aspect-ratio</code>
   - key: features.content_visibility
-    t: content-visibility
+    t: <code>content-visibility</code>
 
   # shapes & graphics
   - key: features.shapes
     t: CSS Shapes
   - key: features.object_fit
-    t: Object-fit
+    t: <code>object-fit</code>
   - key: features.clip_path
-    t: Clip-path
+    t: <code>clip-path</code>
   - key: features.masks
     t: CSS Masks
   - key: features.blend_modes
     t: Blend Modes
   - key: features.blend_modes.description
-    t: The mix-blend-mode property
+    t: The <code>mix-blend-mode</code> property
   - key: features.filter_effects
     t: CSS Filter Effects
   - key: features.backdrop_filter
-    t: backdrop-filter
+    t: <code>backdrop-filter</code>
 
   # interactions
   - key: features.scroll_snap
     t: CSS Scroll Snap
   - key: features.overscroll_behavior
-    t: Overscroll-behavior
+    t: <code>overscroll-behavior</code>
   - key: features.overflow_anchor
-    t: Overflow-anchor
+    t: <code>overflow-anchor</code>
   - key: features.touch_action
-    t: touch-action
+    t: <code>touch-action</code>
   - key: features.pointer_events
-    t: pointer-events
+    t: <code>pointer-events</code>
 
   # typography
   - key: features.web_fonts
@@ -178,21 +178,23 @@ translations:
   - key: features.variables_fonts
     t: Variable fonts
   - key: features.line_breaking
-    t: Line breaking properties (overflow-wrap, word-break, line-break, hyphens)
+    t: Line breaking properties
+  - key: features.line_breaking.description
+    t: <code>overflow-wrap</code>, <code>word-break</code>, <code>line-break</code>, <code>hyphens</code>
   - key: features.font_variant
-    t: Font-variant-*
+    t: <code>font-variant-*</code>
   - key: features.initial_letter
-    t: Initial-letter
+    t: <code>initial-letter</code>
   - key: features.font_variant_numeric
-    t: font-variant-numeric
+    t: <code>font-variant-numeric</code>
   - key: features.font_display
-    t: font-display
+    t: <code>font-display</code>
   - key: features.line_clamp
-    t: line-clamp
+    t: <code>line-clamp</code>
   - key: features.leading_trim
-    t: leading-trim
+    t: <code>leading-trim</code>
   - key: features.direction
-    t: direction
+    t: <code>direction</code>
   - key: features.direction.description
     t: Also includes <code>dir</code> HTML attribute.
 
@@ -203,34 +205,34 @@ translations:
     t: CSS Transforms
   - key: features.animations
     t: CSS Animations
-  - key: perspective
-    t: perspective
+  - key: features.perspective
+    t: <code>perspective</code>
   
-  # media features
+  # media queries
+  - key: features.feature_support_queries
+    t: Feature Support Queries (<code>@supports</code>)
   - key: features.prefers_reduced_motion
-    t: prefers-reduced-motion
+    t: <code>prefers-reduced-motion</code>
   - key: features.prefers_color_scheme
-    t: prefers-color-scheme
+    t: <code>prefers-color-scheme</code>
   - key: features.color_gamut
-    t: color-gamut
+    t: <code>color-gamut</code>
 
   # other features
   - key: features.variables
     t: CSS Variables (Logical Properties)
-  - key: features.feature_support_queries
-    t: Feature Support Queries (@supports)
   - key: features.containment
     t: CSS Containment
   - key: features.will_change
-    t: Will-change
+    t: <code>will-change</code>
   - key: features.calc
-    t: calc()
+    t: <code>calc()</code>
   - key: features.houdini
     t: Houdini
   - key: features.comparison_functions
     t: CSS Comparison Functions
   - key: features.comparison_functions.description
-    t: min(), max(), and clamp()
+    t: <code>min()</code>, <code>max()</code>, and <code>clamp()</code>
 
   ###########################################################################
   # Units & Selectors
