--- a/packages/stateofjs/lib/i18n/state-of-css/yml/model.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/model.yml
@@ -1,4 +1,4 @@
-locale: ADD LOCALE HERE
+locale: en-US
 namespace: css
 translations:
 
@@ -132,46 +132,45 @@ translations:
   - key: features.exclusions # TODO
     t: CSS Exclusions
   - key: features.position_sticky # TODO
-    t: 'Position: sticky'
+    t: '<code>position: sticky</code>'
   - key: features.logical_properties # TODO
     t: Logical Properties
   - key: features.logical_properties.description # TODO
-    t: margin-block-start, padding-inline-end, etc.
+    t: <code>margin-block-start</code>, <code>padding-inline-end</code>, etc.
   - key: features.aspect_ratio # TODO
-    t: aspect-ratio
+    t: <code>aspect-ratio</code>
   - key: features.content_visibility # TODO
-    t: content-visibility
+    t: <code>content-visibility</code>
 
   # shapes & graphics
   - key: features.shapes # TODO
     t: CSS Shapes
   - key: features.object_fit # TODO
-    t: Object-fit
+    t: <code>object-fit</code>
   - key: features.clip_path # TODO
-    t: Clip-path
+    t: <code>clip-path</code>
   - key: features.masks # TODO
     t: CSS Masks
   - key: features.blend_modes # TODO
     t: Blend Modes
   - key: features.blend_modes.description # TODO
-    t: The mix-blend-mode property
+    t: The <code>mix-blend-mode</code> property
   - key: features.filter_effects # TODO
     t: CSS Filter Effects
   - key: features.backdrop_filter # TODO
-    t: backdrop-filter
+    t: <code>backdrop-filter</code>
 
   # interactions
   - key: features.scroll_snap # TODO
     t: CSS Scroll Snap
   - key: features.overscroll_behavior # TODO
-    t: Overscroll-behavior
+    t: <code>overscroll-behavior</code>
   - key: features.overflow_anchor # TODO
-    t: Overflow-anchor
+    t: <code>overflow-anchor</code>
   - key: features.touch_action # TODO
-    t: touch-action
+    t: <code>touch-action</code>
   - key: features.pointer_events # TODO
-    t: pointer-events
-
+    t: <code>pointer-events</code>
 
   # typography
   - key: features.web_fonts # TODO
@@ -179,21 +178,23 @@ translations:
   - key: features.variables_fonts # TODO
     t: Variable fonts
   - key: features.line_breaking # TODO
-    t: Line breaking properties (overflow-wrap, word-break, line-break, hyphens)
+    t: Line breaking properties
+  - key: features.line_breaking.description # TODO
+    t: <code>overflow-wrap</code>, <code>word-break</code>, <code>line-break</code>, <code>hyphens</code>
   - key: features.font_variant # TODO
-    t: Font-variant-*
+    t: <code>font-variant-*</code>
   - key: features.initial_letter # TODO
-    t: Initial-letter
+    t: <code>initial-letter</code>
   - key: features.font_variant_numeric # TODO
-    t: font-variant-numeric
+    t: <code>font-variant-numeric</code>
   - key: features.font_display # TODO
-    t: font-display
+    t: <code>font-display</code>
   - key: features.line_clamp # TODO
-    t: line-clamp
+    t: <code>line-clamp</code>
   - key: features.leading_trim # TODO
-    t: leading-trim
+    t: <code>leading-trim</code>
   - key: features.direction # TODO
-    t: direction
+    t: <code>direction</code>
   - key: features.direction.description # TODO
     t: Also includes <code>dir</code> HTML attribute.
 
@@ -204,34 +205,34 @@ translations:
     t: CSS Transforms
   - key: features.animations # TODO
     t: CSS Animations
-  - key: perspective # TODO
-    t: perspective
+  - key: features.perspective # TODO
+    t: <code>perspective</code>
   
-  # media features
+  # media queries
+  - key: features.feature_support_queries # TODO
+    t: Feature Support Queries (<code>@supports</code>)
   - key: features.prefers_reduced_motion # TODO
-    t: prefers-reduced-motion
+    t: <code>prefers-reduced-motion</code>
   - key: features.prefers_color_scheme # TODO
-    t: prefers-color-scheme
+    t: <code>prefers-color-scheme</code>
   - key: features.color_gamut # TODO
-    t: color-gamut
-    
+    t: <code>color-gamut</code>
+
   # other features
   - key: features.variables # TODO
-    t: CSS Variables
-  - key: features.feature_support_queries # TODO
-    t: Feature Support Queries (@supports)
+    t: CSS Variables (Logical Properties)
   - key: features.containment # TODO
     t: CSS Containment
   - key: features.will_change # TODO
-    t: Will-change
+    t: <code>will-change</code>
   - key: features.calc # TODO
-    t: calc()
+    t: <code>calc()</code>
   - key: features.houdini # TODO
     t: Houdini
   - key: features.comparison_functions # TODO
     t: CSS Comparison Functions
   - key: features.comparison_functions.description # TODO
-    t: min(), max(), and clamp()
+    t: <code>min()</code>, <code>max()</code>, and <code>clamp()</code>
 
   ###########################################################################
   # Units & Selectors
@@ -328,4 +329,10 @@ translations:
     t: CSS in one word
   - key: opinions.sum_up_one_word_css.description # TODO
     t: How would you sum up your opinion of CSS in one word?
+    
+  - key: happiness.state_of_the_web # TODO
+    t: How happy are you with the general state of web technologies?
+  
+  - key: happiness.state_of_css # TODO
+    t: How happy are you with the general state of CSS?
     
