--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -60,7 +60,9 @@ translations:
     t: Privacy Policy
   - key: general.leave_issue
     t: Questions? Found a bug? <a href="{link}" target="_blank">Leave an issue</a>.
-
+  - key: general.emoji_icons
+    t: Emoji icons by <a target="_blank" rel="noreferrer" href="https://icons8.com">Icons8</a>
+    
   # navigation
   - key: general.table_of_contents
     t: Table of Contents
@@ -90,6 +92,7 @@ translations:
     t: >
       This year's {surveyName} survey is now open! {link}
 
+  
   ###########################################################################
   # Nav
   ###########################################################################
@@ -197,15 +200,15 @@ translations:
     t: 👎 Used it > Would not use again
 
   # tools experience (short versions)
-  - key: options.tools.never_heard
+  - key: options.tools.never_heard.short
     t: Never heard
-  - key: options.tools.interested
+  - key: options.tools.interested.short
     t: Interested
-  - key: options.tools.not_interested
+  - key: options.tools.not_interested.short
     t: Not interested
-  - key: options.tools.would_use
+  - key: options.tools.would_use.short
     t: Would use again
-  - key: options.tools.would_not_use
+  - key: options.tools.would_not_use.short
     t: Would not use
   
   # happiness
@@ -422,6 +425,18 @@ translations:
     t: 🧑🏾‍🦲
   - key: options.skin_tone.4
     t: 🧑🏿‍🦲
+
+  # image fallback
+  - key: options.skin_tone.0
+    t: <img src="/emojis/icons8-bald-man-light-skin-tone-100.png" alt="Light skin tone emoji"/>
+  - key: options.skin_tone.1
+    t: <img src="/emojis/icons8-bald-man-medium-light-skin-tone-100.png" alt="Medium-light skin tone emoji"/>
+  - key: options.skin_tone.2
+    t: <img src="/emojis/icons8-bald-man-medium-skin-tone-100.png" alt="Medium skin tone emoji"/>
+  - key: options.skin_tone.3
+    t: <img src="/emojis/icons8-bald-man-medium-dark-skin-tone-100.png" alt="Medium skin tone emoji"/>
+  - key: options.skin_tone.4
+    t: <img src="/emojis/icons8-bald-man-dark-skin-tone-100.png" alt="Dark skin tone emoji"/>
 
   ###########################################################################
   # Tools
